jar + javadoc